<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".InfoFragment"
    android:background="@color/white">



    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@color/purple"
        android:gravity="center"
        android:text="@string/titleForInfo"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="669dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/brandText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brand"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/yearText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/years"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/colorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/typeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/bodeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/body"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/fuelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fuel"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/engineVolumeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/engine"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/weightText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weigth"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ownerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/owner"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/addressText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>



